<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:padding="4dp"
    android:theme="@style/base_theme"
    tools:context=".views.SharedRouteDialog">


    <TextView
        android:id="@+id/text_view_shared_dialog_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/share_route_detail_info"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/edit_text_shared_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/shared_route_title_hint"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_shared_dialog_top" />

    <EditText
        android:id="@+id/edit_text_shared_dialog_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left|top"
        android:padding="5dp"
        android:hint="@string/share_route_content_hint"
        android:background="@drawable/item_travel_like_chat_background"
        android:minHeight="100dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_shared_dialog_title" />

    <Button
        android:id="@+id/btn_shared_dialog_select_city"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/item_travel_like_chat_background"
        android:padding="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/share_route_select_city"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_shared_dialog_content" />

    <EditText
        android:id="@+id/edit_text_shared_dialog_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/share_route_tag_hint"
        android:textColor="@color/dodger_blue"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_shared_dialog_select_city" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_shared_dialog_added_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_shared_dialog_tag">

    </android.support.v7.widget.RecyclerView>

    <Button
        android:id="@+id/btn_shared_dialog_cancel"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/location_cancel"
        android:background="@drawable/background_location_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycler_view_shared_dialog_added_tag" />

    <Button
        android:id="@+id/btn_shared_dialog_share"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginEnd="4dp"
        android:text="@string/location_share"
        android:background="@drawable/background_location_enroll_btn"
        app:layout_constraintEnd_toStartOf="@id/btn_shared_dialog_cancel"
        app:layout_constraintTop_toBottomOf="@+id/recycler_view_shared_dialog_added_tag" />

</android.support.constraint.ConstraintLayout>