<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.RouteAddActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/container_route_add_search_tab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_white_ellipse"
        android:elevation="1dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/image_btn_route_add_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:layout_marginStart="5dp"
            android:src="@drawable/ic_back_travel_back_20"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/image_btn_route_add_show_route"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@color/transparent"
            android:src="@drawable/ic_route_travel_add_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/image_btn_route_add_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@color/transparent"
            android:src="@drawable/ic_route_add_search"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/image_btn_route_add_show_route"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_text_route_add_search"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:background="@null"
            android:hint="@string/hint_route_add_search"
            android:paddingBottom="5dp"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/image_btn_route_add_search"
            app:layout_constraintStart_toEndOf="@id/image_btn_route_add_back"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>


    <android.support.constraint.ConstraintLayout
        android:id="@+id/container_route_add_map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <com.skt.Tmap.TMapView
            android:id="@+id/tmap_route_add"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </com.skt.Tmap.TMapView>

        <android.support.v4.view.ViewPager
            android:id="@+id/view_pager_route_add_location_list"
            android:layout_width="350dp"
            android:layout_height="160dp"
            android:layout_marginBottom="10dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        </android.support.v4.view.ViewPager>

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/container_route_add_search"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_route_add_search_tab"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_route_add_search_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0">

        </android.support.v7.widget.RecyclerView>

    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:id="@+id/container_route_add_added_route"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/container_route_add_search_tab"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal"
            android:layout_marginEnd="5dp"
            android:gravity="right">

            <Button
                android:id="@+id/btn_route_add_enroll"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@drawable/background_location_enroll_btn"
                android:layout_marginEnd="5dp"
                android:textColor="@color/black"
                android:text="@string/location_add" />

            <Button
                android:id="@+id/btn_route_add_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background_location_cancel"
                android:layout_marginEnd="10dp"
                android:text="@string/location_cancel"
                android:textColor="@color/white"/>

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view_route_add_added_route"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </android.support.v7.widget.RecyclerView>

        </ScrollView>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
