<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view_travel_fragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_participants"
    android:layout_marginTop="6dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="4dp">

        <!-- Circle Image 로 변경 -->
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_view_travel_item_profile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@color/white"
            android:layout_marginStart="4dp"
            android:layout_marginTop="6dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/image_view_travel_item_remove"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:visibility="gone"
            android:scaleType="fitXY"
            android:layout_marginTop="6dp"
            android:src="@drawable/ic_item_travel_cancel_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/image_view_travel_item_modify"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:visibility="gone"
            android:scaleType="fitXY"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="4dp"
            android:src="@drawable/ic_item_travel_alter_20"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/image_view_travel_item_remove"/>


        <!-- 사용자 닉네임 -->
        <TextView
            android:id="@+id/text_view_travel_item_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/id_temp"
            android:textColor="@color/common_black"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/image_view_travel_item_modify"
            app:layout_constraintStart_toEndOf="@id/image_view_travel_item_profile" />

        <!-- 동행 일자 -->
        <TextView
            android:id="@+id/text_view_travel_item_travel_period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:text="@string/start_temp"
            android:textColor="@color/common_black"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/image_view_travel_item_profile"
            app:layout_constraintTop_toBottomOf="@id/text_view_travel_item_id" />

        <TextView
            android:id="@+id/text_view_travel_item_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:text="@string/location_temp"
            android:textColor="@color/common_black"
            android:textSize="@dimen/sp_travel_fragment_12sp"
            app:layout_constraintStart_toEndOf="@id/image_view_travel_item_profile"
            app:layout_constraintTop_toBottomOf="@id/text_view_travel_item_travel_period" />

        <TextView
            android:id="@+id/text_view_travel_item_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/common_black"
            android:textSize="14sp"
            android:paddingTop="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_travel_item_location" />

        <!--ImageView는 이미지를 추가한 경우에만 보여주도록 기본 설정은 GONE -->
        <ImageView
            android:id="@+id/image_view_travel_item_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_travel_item_content" />


        <LinearLayout
            android:id="@+id/linear_item_trevel_chat_mem_profiles"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:elevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_view_travel_item_photo">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image_view_travel_chat_mem1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:civ_border_width="2dp"
                app:civ_border_color="@color/main_red"
                android:layout_marginRight="5dp"
                android:visibility="gone" />


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image_view_travel_chat_mem2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:civ_border_width="2dp"
                app:civ_border_color="@color/main_red"
                android:layout_marginRight="5dp"
                android:visibility="gone"/>


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image_view_travel_chat_mem3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:civ_border_width="2dp"
                app:civ_border_color="@color/main_red"
                android:layout_marginRight="5dp"
                android:visibility="gone"/>


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image_view_travel_chat_mem4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:civ_border_width="2dp"
                app:civ_border_color="@color/main_red"
                android:layout_marginRight="5dp"
                android:visibility="gone"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/linear_item_trevel_chat_mem_profiles">

            <ImageView
                android:id="@+id/image_view_travel_item_like"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_like_tavel_fragment_default_32" />

            <TextView
                android:id="@+id/text_view_travel_item_like_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp" />

            <ImageView
                android:id="@+id/image_view_travel_item_chat"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="4dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_chat_travel_item_32" />

            <TextView
                android:id="@+id/text_view_travel_item_comment_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp" />

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>